--- a/index.html
+++ b/index.html
@@ -139,25 +139,29 @@
                 </p>
               </div>
             </li>
-            <li class="features-list-item">
-              <div class="item-container">
-                <h3 class="item-title">Multi-Language Support:</h3>
-                <p class="item-text">
-                  The app is designed to be accessible to users all around the
-                  world, with support for multiple languages, making it easier
-                  for people to use the app in their native language.
-                </p>
-              </div>
-            </li>
-            <li class="features-list-item">
-              <div class="item-container">
-                <h3 class="item-title">Offline Capabilities:</h3>
-                <p class="item-text">
-                  The app offers offline capabilities, allowing users to access
-                  certain features and content even when they are not connected
-                  to the internet.
-                </p>
-              </div>
+            <li>
+              <ul class="flex-list">
+                <li class="features-list-item current">
+                  <div class="item-container">
+                    <h3 class="item-title">Multi-Language Support:</h3>
+                    <p class="item-text">
+                      The app is designed to be accessible to users all around
+                      the world, with support for multiple languages, making it
+                      easier for people to use the app in their native language.
+                    </p>
+                  </div>
+                </li>
+                <li class="features-list-item current">
+                  <div class="item-container">
+                    <h3 class="item-title">Offline Capabilities:</h3>
+                    <p class="item-text">
+                      The app offers offline capabilities, allowing users to
+                      access certain features and content even when they are not
+                      connected to the internet.
+                    </p>
+                  </div>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
