--- a/index.html
+++ b/index.html
@@ -139,34 +139,374 @@
                 </p>
               </div>
             </li>
-            <li>
-              <ul class="flex-list">
-                <li class="features-list-item current">
-                  <div class="item-container">
-                    <h3 class="item-title">Multi-Language Support:</h3>
-                    <p class="item-text">
-                      The app is designed to be accessible to users all around
-                      the world, with support for multiple languages, making it
-                      easier for people to use the app in their native language.
-                    </p>
-                  </div>
-                </li>
-                <li class="features-list-item current">
-                  <div class="item-container">
-                    <h3 class="item-title">Offline Capabilities:</h3>
-                    <p class="item-text">
-                      The app offers offline capabilities, allowing users to
-                      access certain features and content even when they are not
-                      connected to the internet.
-                    </p>
-                  </div>
-                </li>
-              </ul>
+            <li class="features-list-item">
+              <div class="item-container">
+                <h3 class="item-title">Multi-Language Support:</h3>
+                <p class="item-text">
+                  The app is designed to be accessible to users all around the
+                  world, with support for multiple languages, making it easier
+                  for people to use the app in their native language.
+                </p>
+              </div>
+            </li>
+            <li class="features-list-item">
+              <div class="item-container">
+                <h3 class="item-title">Offline Capabilities:</h3>
+                <p class="item-text">
+                  The app offers offline capabilities, allowing users to access
+                  certain features and content even when they are not connected
+                  to the internet.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
+
+      <section class="video">
+        <div class="gradient-container">
+          <div class="container video-container">
+            <div class="video-wrapper">
+              <h2 class="video-title">WATCH THE VIDEO</h2>
+              <p class="video-text">
+                Watch the video below to see our mobile app in action. With a
+                user-friendly interface, personalized recommendations, secure
+                transactions, and real-time updates, our app is available for
+                download on both Apple and Android devices and is designed to
+                make your life easier.
+              </p>
+              <ul class="media-list">
+                <li class="media-list-item">
+                  <svg width="30" height="27" class="media-icon">
+                    <use href="./images/icons.svg#apple"></use>
+                  </svg>
+                </li>
+                <li class="media-list-item">
+                  <svg width="32" height="36" class="media-icon">
+                    <use href="./images/icons.svg#android"></use>
+                  </svg>
+                </li>
+              </ul>
+            </div>
+            <button type="button" class="video-btn">
+              <picture>
+                <source
+                  srcset="
+                    ./images/desk/video-desk.png      1x,
+                    ./images/desk2x/video-desk@2x.png 2x
+                  "
+                  media="(min-width: 1280px)"
+                />
+                <source
+                  srcset="
+                    ./images/tab/video-tab.png      1x,
+                    ./images/tab2x/video-tab@2x.png 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/mob/video.png      1x,
+                    ./images/mob2x/video@2x.png 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="./images/mob/video.png"
+                  width="501"
+                  height="285"
+                  alt="video"
+                />
+              </picture>
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <section class="team">
+        <div class="container">
+          <h2 class="team-title">OUR TEAM</h2>
+          <p class="team-text">
+            Our team is made up of talented and passionate individuals who are
+            committed to providing the best experience for our users. Each
+            member brings a unique set of skills and expertise to the table,
+            allowing us to work collaboratively and effectively to achieve our
+            goals.
+          </p>
+          <ul class="team-list">
+            <li class="team-list-item">
+              <div class="member-card">
+                <picture class="member-img">
+                  <source
+                    srcset="
+                      ./images/desk/david-patel-desk.png      1x,
+                      ./images/desk2x/david-patel-desk@2x.png 2x
+                    "
+                    media="(min-width: 1280px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tab/david-patel-tab.png      1x,
+                      ./images/tab2x/david-patel-tab@2x.png 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mob/david-patel.png      1x,
+                      ./images/mob2x/david-patel@2x.png 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/mob/david-patel.png"
+                    width="296"
+                    height="299"
+                    alt="david patel photo"
+                  />
+                </picture>
+                <h3 class="member-name">David Patel</h3>
+                <p class="member-position">Managing Direcor</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <div class="member-card current">
+                <picture class="member-img">
+                  <source
+                    srcset="
+                      ./images/desk/rachel-kim-desk.png      1x,
+                      ./images/desk2x/rachel-kim-desk@2x.png 2x
+                    "
+                    media="(min-width: 1280px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tab/rachel-kim-tab.png      1x,
+                      ./images/tab2x/rachel-kim-tab@2x.png 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mob/rachel-kim.png      1x,
+                      ./images/mob2x/rachel-kim@2x.png 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/mob/rachel-kim.png"
+                    width="296"
+                    height="299"
+                    alt="rachel kim photo"
+                  />
+                </picture>
+                <h3 class="member-name">Rachel Kim</h3>
+                <p class="member-position">Lead Designer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <div class="member-card current">
+                <picture class="member-img">
+                  <source
+                    srcset="
+                      ./images/desk/samantha-chen-desk.png      1x,
+                      ./images/desk2x/samantha-chen-desk@2x.png 2x
+                    "
+                    media="(min-width: 1280px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tab/samantha-chen-tab.png      1x,
+                      ./images/tab2x/samantha-chen-tab@2x.png 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mob/samantha-chen.png      1x,
+                      ./images/mob2x/samantha-chen@2x.png 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/mob/samantha-chen.png"
+                    width="296"
+                    height="299"
+                    alt="samantha chen photo"
+                  />
+                </picture>
+                <h3 class="member-name">Samantha Chen</h3>
+                <p class="member-position">Lead Developer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <div class="member-card">
+                <picture class="member-img">
+                  <source
+                    srcset="
+                      ./images/desk/andrew-nguyen-desk.png      1x,
+                      ./images/desk2x/andrew-nguyen-desk@2x.png 2x
+                    "
+                    media="(min-width: 1280px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/tab/andrew-nguyen-tab.png      1x,
+                      ./images/tab2x/andrew-nguyen-tab@2x.png 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/mob/andrew-nguyen.png      1x,
+                      ./images/mob2x/andrew-nguyen@2x.png 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/mob/andrew-nguyen.png"
+                    width="296"
+                    height="299"
+                    alt="andrew nguyen photo"
+                  />
+                </picture>
+                <h3 class="member-name">Andrew Nguyen</h3>
+                <p class="member-position">Sr. UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="testimonials">
+        <div class="container">
+          <h2 class="testimonials-title">WHAT OUR COSTUMER’S SAY</h2>
+          <img
+            class="testimonials-img"
+            src="./images/mob/jon-doe.png"
+            width="181"
+            height="181"
+            alt="customer photo"
+          />
+          <h3 class="person-title">Jon Doe</h3>
+          <p class="person-position">Company Inc.</p>
+          <p class="person-comment">
+            I've been using this app for a few weeks now and I have to say, I'm
+            really impressed. It's so easy to use and the personalized
+            recommendations are spot-on. Plus, the transactions are secure and
+            the updates are always timely. I would definitely recommend this app
+            to anyone looking for a better mobile experience.
+          </p>
+          <ul class="slider-list">
+            <li>
+              <button type="button" class="slider-btn current"></button>
+            </li>
+            <li>
+              <button type="button" class="slider-btn"></button>
+            </li>
+            <li>
+              <button type="button" class="slider-btn"></button>
+            </li>
+            <li>
+              <button type="button" class="slider-btn"></button>
+            </li>
+            <li>
+              <button type="button" class="slider-btn"></button>
+            </li>
+            <li>
+              <button type="button" class="slider-btn"></button>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="contact">
+        <div class="gradient-footer">
+          <div class="container">
+            <h2 class="contact-title">CONTACT US</h2>
+            <div class="contact-container">
+              <form class="contact-form" name="contact-form">
+                <input
+                  type="text"
+                  class="contact-input"
+                  type="text"
+                  class="contact-input"
+                  placeholder="Name"
+                  name="user-name"
+                />
+                <input
+                  type="email"
+                  class="contact-input"
+                  type="text"
+                  class="contact-input"
+                  placeholder="Email"
+                  name="user-email"
+                />
+                <textarea
+                  id=""
+                  class="contact-input text"
+                  placeholder="Message"
+                  name="user-message"
+                ></textarea>
+                <button type="submit" class="contact-btn">SUBMIT</button>
+              </form>
+              <div class="contact-wrapper">
+                <strong class="strong">Get in touch with us</strong>
+                <p class="contact-text">
+                  Have a question or comment about our app? Get in touch with us
+                  using the contact form below and our team will respond
+                  shortly.
+                </p>
+                <ul class="social-list">
+                  <li>
+                    <a href="#" class="social-link">
+                      <svg class="social-icon" width="10" height="18">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="social-link">
+                      <svg class="social-icon" width="18" height="15">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#" class="social-link">
+                      <svg class="social-icon" width="18" height="18">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+                <address class="address">
+                  <ul class="address-list">
+                    <li>
+                      <a href="tel:+xxxxxxxxxxxx" class="address-link"
+                        >+xx-xxxx-xxxx-xx</a
+                      >
+                    </li>
+                    <li>
+                      <a href="mailto:goIteens@gmail.com" class="address-link"
+                        >goIteens@gmail.com</a
+                      >
+                    </li>
+                  </ul>
+                </address>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+
+    <footer class="footer">
+      <div class="container">
+        <p class="footer-text">
+          &copy 2019 GoIteens Template. All Rights Reserved
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
