--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                   Offline capabilities for uninterrupted use
                 </li>
               </ul>
-              <button type="button" class="hero-btn">Download</button>
+              <div class="download-btn">
+                <button type="button" class="hero-btn">Download</button>
+              </div>
             </div>
             <picture class="hero-img">
               <source
@@ -459,25 +461,42 @@
                 </p>
                 <ul class="social-list">
                   <li>
-                    <a href="#" class="social-link">
-                      <svg class="social-icon" width="10" height="18">
-                        <use href="./images/icons.svg#facebook"></use>
-                      </svg>
-                    </a>
+                    <div class="social-link-container">
+                      <a href="#" class="social-link">
+                        <svg class="social-icon" width="10" height="18">
+                          <use href="./images/icons.svg#facebook"></use>
+                          <linearGradient
+                            id="paint0_linear_2680_42"
+                            x1="0.650879"
+                            y1="6.6851"
+                            x2="9.03398"
+                            y2="6.68731"
+                            gradientUnits="userSpaceOnUse"
+                          >
+                            <stop stop-color="#00C5EB" />
+                            <stop offset="1" stop-color="#B544FE" />
+                          </linearGradient>
+                        </svg>
+                      </a>
+                    </div>
                   </li>
                   <li>
-                    <a href="#" class="social-link">
-                      <svg class="social-icon" width="18" height="15">
-                        <use href="./images/icons.svg#twitter"></use>
-                      </svg>
-                    </a>
+                    <div class="social-link-container">
+                      <a href="#" class="social-link">
+                        <svg class="social-icon" width="18" height="15">
+                          <use href="./images/icons.svg#twitter"></use>
+                        </svg>
+                      </a>
+                    </div>
                   </li>
                   <li>
-                    <a href="#" class="social-link">
-                      <svg class="social-icon" width="18" height="18">
-                        <use href="./images/icons.svg#linkedin"></use>
-                      </svg>
-                    </a>
+                    <div class="social-link-container">
+                      <a href="#" class="social-link">
+                        <svg class="social-icon" width="18" height="18">
+                          <use href="./images/icons.svg#linkedin"></use>
+                        </svg>
+                      </a>
+                    </div>
                   </li>
                 </ul>
                 <address class="address">
