--- a/index.html
+++ b/index.html
@@ -34,11 +34,41 @@
                 <li><a class="nav-link" href="#">CONTACT</a></li>
               </ul>
             </nav>
-            <button type="button" class="menu-btn">
+            <button
+              type="button"
+              class="menu-btn"
+              onclick="document.getElementById('modal-menu').classList.add('is-open')"
+            >
               <svg width="26" height="16" class="menu-icon">
                 <use href="./images/icons.svg#burger"></use>
               </svg>
             </button>
+          </div>
+
+          <div class="modal-menu" id="modal-menu">
+            <div class="menu">
+              <div class="menu-logo-container">
+                <a class="menu-logo-link" href="./index.html">Mobileapp</a>
+                <button
+                  type="button"
+                  class="close-btn"
+                  onclick="document.getElementById('modal-menu').classList.remove('is-open')"
+                >
+                  <svg class="close-icon" width="20" height="20">
+                    <use href="./images/icons.svg#close"></use>
+                  </svg>
+                </button>
+              </div>
+              <ul class="menu-list">
+                <li>
+                  <a href="./index.html" class="menu-link current">HOME</a>
+                </li>
+                <li><a href="" class="menu-link">FEATURES</a></li>
+                <li><a href="" class="menu-link">TEAM</a></li>
+                <li><a href="" class="menu-link">TESTIMONIALS</a></li>
+                <li><a href="" class="menu-link">CONTACT</a></li>
+              </ul>
+            </div>
           </div>
         </header>
         <section class="hero">
@@ -87,6 +117,177 @@
                 alt="mobile phone"
               />
             </picture>
+          </div>
+
+          <div class="modal-overflay is-open">
+            <div class="overflay">
+              <button type="button" class="close-btn download">
+                <svg class="close-icon" width="20" height="20">
+                  <use href="./images/icons.svg#close"></use>
+                </svg>
+              </button>
+              <h2 class="overflay-title">Download</h2>
+              <form name="download-form" class="download-form">
+                <input
+                  class="visually-hidden download-input"
+                  type="radio"
+                  name="download"
+                  value="free"
+                  id="free-download"
+                />
+
+                <label class="download-label" for="free-download">
+                  <div class="label-container">
+                    <svg class="file-icon" width="80" height="106">
+                      <use href="./images/icons.svg#file-load"></use>
+                    </svg>
+                    <p class="label-title">Download free plan</p>
+                    <ul class="label-list">
+                      <li>
+                        <p class="label-text">Basic functionality</p>
+                      </li>
+                      <li>
+                        <p class="label-text">Limited access</p>
+                      </li>
+                      <li>
+                        <p class="label-text">Community support</p>
+                      </li>
+                    </ul>
+                  </div>
+                </label>
+
+                <input
+                  class="visually-hidden download-input"
+                  type="radio"
+                  name="download"
+                  id="download"
+                  value="subscription"
+                />
+
+                <label class="download-label" for="download">
+                  <div class="label-container" id="download">
+                    <svg class="file-icon" width="80" height="106">
+                      <use href="./images/icons.svg#file-load"></use>
+                    </svg>
+                    <p class="label-title">Download for 20$</p>
+                    <ul class="label-list">
+                      <li>
+                        <p class="label-text">Ad-free experience</p>
+                      </li>
+                      <li>
+                        <p class="label-text">Unlock exclusive features</p>
+                      </li>
+                      <li>
+                        <p class="label-text">
+                          Content for the ultimate mobile experience
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
+                </label>
+              </form>
+              <p class="download-text">
+                No matter which plan you choose, we're excited to have you as
+                part of our community of mobile app users!
+              </p>
+              <div class="info-list-container">
+                <ul class="info-list">
+                  <li class="info-list-item">
+                    <div class="info-icon-container">
+                      <svg width="20" height="26" class="info-icon">
+                        <use href="./images/icons.svg#file"></use>
+                      </svg>
+                    </div>
+                    <div class="info-text">
+                      <p class="info-title">App name</p>
+                      <p class="info-value">Mobileapp.layout</p>
+                    </div>
+                  </li>
+                  <li class="info-list-item">
+                    <div class="info-icon-container">
+                      <svg width="22" height="28" class="info-icon">
+                        <use href="./images/icons.svg#license"></use>
+                      </svg>
+                    </div>
+                    <div class="info-text">
+                      <p class="info-title">License</p>
+                      <p class="info-value">Free</p>
+                    </div>
+                  </li>
+                  <li class="info-list-item">
+                    <div class="info-icon-container">
+                      <svg width="26" height="26" class="info-icon">
+                        <use href="./images/icons.svg#user"></use>
+                      </svg>
+                    </div>
+                    <div class="info-text">
+                      <p class="info-title">Author</p>
+                      <p class="info-value">Mobile Marrket App.com</p>
+                    </div>
+                  </li>
+                  <li class="info-list-item">
+                    <div class="info-icon-container">
+                      <svg width="22" height="24" class="info-icon">
+                        <use href="./images/icons.svg#calendar"></use>
+                      </svg>
+                    </div>
+                    <div class="info-text">
+                      <p class="info-title">Data</p>
+                      <p class="info-value">21.02.2022</p>
+                    </div>
+                  </li>
+                  <li class="info-list-item line-span">
+                    <span class="line"></span>
+                  </li>
+                  <li class="info-list-item">
+                    <div class="info-icon-container">
+                      <svg width="26" height="24" class="info-icon">
+                        <use href="./images/icons.svg#desk"></use>
+                      </svg>
+                    </div>
+                    <div class="info-text">
+                      <p class="info-title">OC</p>
+                      <p class="info-value">Windows</p>
+                    </div>
+                  </li>
+                  <li class="info-list-item">
+                    <div class="info-icon-container">
+                      <svg width="24" height="24" class="info-icon">
+                        <use href="./images/icons.svg#globe"></use>
+                      </svg>
+                    </div>
+                    <div class="info-text">
+                      <p class="info-title">Language</p>
+                      <p class="info-value">English</p>
+                    </div>
+                  </li>
+                  <li class="info-list-item">
+                    <div class="info-icon-container">
+                      <svg width="22" height="22" class="info-icon">
+                        <use href="./images/icons.svg#size"></use>
+                      </svg>
+                    </div>
+                    <div class="info-text">
+                      <p class="info-title">Size</p>
+                      <p class="info-value">4.16 MB</p>
+                    </div>
+                  </li>
+                  <li class="info-list-item">
+                    <div class="info-icon-container">
+                      <svg width="28" height="28" class="info-icon">
+                        <use href="./images/icons.svg#load"></use>
+                      </svg>
+                    </div>
+                    <div class="info-text">
+                      <p class="info-title">Downloads</p>
+                      <p class="info-value">964</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+
+              <a class="download-link" href="#" download="">Download</a>
+            </div>
           </div>
         </section>
       </div>
@@ -431,21 +632,16 @@
                 <input
                   type="text"
                   class="contact-input"
-                  type="text"
-                  class="contact-input"
                   placeholder="Name"
                   name="user-name"
                 />
                 <input
                   type="email"
                   class="contact-input"
-                  type="text"
-                  class="contact-input"
                   placeholder="Email"
                   name="user-email"
                 />
                 <textarea
-                  id=""
                   class="contact-input text"
                   placeholder="Message"
                   name="user-message"
