--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                   id="free-download"
                 />
 
-                <label class="download-label" for="free-download">
-                  <div class="label-container">
+                <label class="download-label" for="free-download"
+                  ><div class="label-container">
                     <svg class="file-icon" width="80" height="106">
                       <use href="./images/icons.svg#file-load"></use>
                     </svg>
@@ -165,7 +165,7 @@
                 />
 
                 <label class="download-label" for="download">
-                  <div class="label-container" id="download">
+                  <div class="label-container">
                     <svg class="file-icon" width="80" height="106">
                       <use href="./images/icons.svg#file-load"></use>
                     </svg>
@@ -669,7 +669,7 @@
                             y2="6.68731"
                             gradientUnits="userSpaceOnUse"
                           >
-                            <stop stop-color="#00C5EB" />
+                            <stop offset="0" stop-color="#00C5EB" />
                             <stop offset="1" stop-color="#B544FE" />
                           </linearGradient>
                         </svg>
@@ -719,7 +719,7 @@
     <footer class="footer">
       <div class="container">
         <p class="footer-text">
-          &copy 2019 GoIteens Template. All Rights Reserved
+          &copy; 2019 GoIteens Template. All Rights Reserved
         </p>
       </div>
     </footer>
